Added Maze Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="main_maze_button">Maze</string>
     <string name="main_camera_button">Camera</string>
     <string name="main_typing_button">Typing</string>
+    <string name="title_activity_maze">MazeActivity</string>
 </resources>
