--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="main_maze_button">Maze</string>
     <string name="main_camera_button">Camera</string>
     <string name="main_typing_button">Typing</string>
-    <string name="title_activity_maze">MazeActivity</string>
+    <string name="title_activity_maze">Maze</string>
+    <string name="title_activity_camera">Camera</string>
+    <string name="title_activity_typing">Typing</string>
 </resources>
