Added 'phone' selection input, and refined button behaviour some more.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="title_activity_camera">Camera</string>
     <string name="title_activity_typing">Typing</string>
     <string name="title_activity_ddr">DDR</string>
+
+    <string-array name="phones">
+        <item>Edwin</item>
+        <item>Dimas</item>
+        <item>Milan</item>
+    </string-array>
 </resources>
